# simple-ftp

./: README.md  simple-ftp.cabal
app/: Main.hs  OptionsParser.hs
src/FTP/: Commands.hs  Server.hs
