cabal-version: 2.2
name:          simple-ftp
version:       0.1.0.0
--synopsis:
--description:
homepage:      https://github.com/cyberfined/simple-ftp
bug-reports:   https://github.com/cyberfined/simple-ftp/issues
author:        cyberfined
maintainer:    cyberfined@protonmail.com
copyright:     Copyright (c) cyberfined
license:       WTFPL
license-file:  LICENSE
category:      Misc
build-type:    Simple
extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://github.com/cyberfined/simple-ftp

library
  exposed-modules:
      FTP.Server
  other-modules:
      FTP.Commands
  hs-source-dirs:
      src
  default-extensions:
      DerivingStrategies
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
    , RecordWildCards
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , bytestring >= 0.10 && < 1
    , containers >= 0.6 && < 1
    , directory >= 1.3 && < 2
    , exceptions >= 0.10 && < 1
    , fast-logger >= 3.1 && < 4
    , filepath-bytestring >= 1.4 && < 2
    , mtl >= 2.2 && < 3
    , network >= 3.1 && < 4
    , network-simple >= 0.4 && < 1
    , time >= 1.9 && < 2
    , unix-compat >= 0.6 && < 1
    , utf8-string >= 1 && < 3
  default-language: Haskell2010

executable simple-ftp
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall
  default-extensions:
      OverloadedStrings
  build-depends:
      base >= 4.7 && < 5
    , optparse-applicative >= 0.17 && < 1
    , simple-ftp
  default-language: Haskell2010
